<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.techdatum.epanchayat.textUi.CustomTextView
            style="@style/NormalHeaderStyle"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <com.techdatum.epanchayat.textUi.CustomTextView
            style="@style/NormalHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/to"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <com.techdatum.epanchayat.textUi.CustomTextView
            style="@style/HeaderStyle"
            android:layout_gravity="center"
            android:text="@string/applicationname"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.techdatum.epanchayat.textUi.CustomTextView
            style="@style/NormalHeaderStyle"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/pallepragath"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <com.techdatum.epanchayat.textUi.CustomTextView
            style="@style/NormalHeaderStyle"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/dailyapprailsal"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>
