<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_4ssp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_error" />

            <com.techdatum.epanchayat.textUi.CustomTextView
                style="@style/HeaderStyle"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_2ssp"
                android:layout_marginBottom="@dimen/_2ssp"
                android:text="@string/loginerror"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/edittexthintcolor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <com.techdatum.epanchayat.textUi.CustomTextView
                android:id="@+id/userid"
                style="@style/NormalHeaderStyle"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/text_color" />

            <com.techdatum.epanchayat.textUi.CustomTextView
                style="@style/NormalHeaderStyle"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/approvalmessage" />
        </LinearLayout>

        <com.techdatum.epanchayat.textUi.CustomTextView
            style="@style/NormalHeaderStyle"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/waitingforapproval" />


        <Button
            android:id="@+id/bt_okay"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/book_button_bg"
            android:text="@string/approvalokbutton"
            android:textColor="@color/white" />


    </LinearLayout>
</androidx.cardview.widget.CardView>




