<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_4ssp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.techdatum.epanchayat.textUi.CustomTextView
                    style="@style/HeaderStyle"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_2ssp"
                    android:layout_marginBottom="@dimen/_2ssp"
                    android:text="@string/verificationtitle"
                    android:textAllCaps="true"
                    android:textSize="@dimen/_14sdp" />

                <ImageView
                    android:id="@+id/iv_dismis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/ic_close" />
            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/edittexthintcolor" />

        <com.techdatum.epanchayat.textUi.CustomTextView
            style="@style/NormalHeaderStyle"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/verificationmessage"
            android:textSize="@dimen/_12ssp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/bg_edittext">

            <EditText
                android:id="@+id/et_otp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:background="@drawable/dialog_verification_edit_bg"
                android:hint="@string/enterotp"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/edittexthintcolor"
                android:textSize="@dimen/_12ssp" />

        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="5dp"
            android:weightSum="2">

            <RelativeLayout
                android:id="@+id/lay_reportno_rg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext_fill_color">

                <com.techdatum.epanchayat.textUi.CustomTextView
                    style="@style/HeaderStyle"
                    android:layout_centerInParent="true"
                    android:text="@string/resendotp"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lay_rg_yes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext_fill_color">

                <com.techdatum.epanchayat.textUi.CustomTextView
                    style="@style/HeaderStyle"
                    android:layout_centerInParent="true"
                    android:text="@string/submit_verfication"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>




